[package]
name = "pixel_landmark_localizer"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.6"}

screen_capture = { git = "https://github.com/iwanders/displaylight_rs", rev="525072ef5e280063542395e1ee2664b1f555d5d4" }


serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"


[dev-dependencies]
rand_xoshiro = "0.6.0"

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# Enable some optimisations, but not all of it.
opt-level = 2
debug = 1


[[bin]]
name = "map"
path = "bin/map.rs"
